--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
       background-color: gold;
     }
   </style>
+  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9456767253859853"
+     crossorigin="anonymous"></script>
+
 </head>
 <body>
 
