--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BLOCKSHOOTER</title>
   <style>
     body {
@@ -14,32 +14,33 @@
     }
 
     h1 {
-      padding-top: 20px;
+      margin-top: 10px;
+      font-size: 24px;
       color: #333;
     }
 
     p {
       color: #555;
+      font-size: 16px;
     }
 
     canvas {
       background-color: black;
       display: block;
-      margin: 20px auto;
+      margin: 10px auto;
       border: 4px solid #ccc;
+      width: 100vmin;
+      height: 100vmin;
     }
 
     #startButton {
-      position: absolute;
-      top: 65%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      margin-top: 10px;
       background-color: yellow;
       color: black;
-      font-size: 24px;
+      font-size: 20px;
       font-weight: bold;
       border: none;
-      padding: 16px 32px;
+      padding: 12px 24px;
       border-radius: 12px;
       cursor: pointer;
       z-index: 2;
@@ -51,64 +52,60 @@
       background-color: gold;
     }
 
-    #mobileControls {
-      position: fixed;
-      bottom: 30px;
-      left: 50%;
-      transform: translateX(-50%);
+    .mobile-controls {
       display: flex;
+      justify-content: center;
       gap: 20px;
-      z-index: 3;
+      margin-top: 10px;
     }
 
-    #mobileControls button {
-      width: 60px;
-      height: 60px;
-      font-size: 24px;
-      font-weight: bold;
-      border: none;
-      border-radius: 50%;
-      background-color: yellow;
-      color: black;
+    .mobile-button {
+      font-size: 20px;
+      padding: 12px;
+      border-radius: 10px;
+      background-color: #eee;
+      border: 2px solid #ccc;
       cursor: pointer;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+      flex: 1;
     }
 
-    #mobileControls button:active {
-      background-color: gold;
-    }
-
-    @media (min-width: 800px) {
-      #mobileControls {
+    @media (min-width: 768px) {
+      .mobile-controls {
         display: none;
       }
     }
   </style>
-
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9456767253859853"
-     crossorigin="anonymous"></script>
 </head>
 <body>
 
-  <h1>WELCOME TO BLOCKSHOOTER</h1>
-  <p>Use Arrow Keys to move, Spacebar to shoot!</p>
+  <h1>BLOCKSHOOTER</h1>
+  <p>Use Arrow Keys or Touch Controls</p>
 
-  <canvas id="gameCanvas" width="800" height="600"></canvas>
+  <canvas id="gameCanvas"></canvas>
   <button id="startButton">Click to Start</button>
 
   <!-- Mobile Controls -->
-  <div id="mobileControls">
-    <button id="leftBtn">◀</button>
-    <button id="shootBtn">🔫</button>
-    <button id="rightBtn">▶</button>
+  <div class="mobile-controls" id="mobileControls" style="display: none;">
+    <button class="mobile-button" id="leftBtn">←</button>
+    <button class="mobile-button" id="shootBtn">Shoot</button>
+    <button class="mobile-button" id="rightBtn">→</button>
   </div>
 
   <script>
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
 
-    const SCREEN_WIDTH = canvas.width;
-    const SCREEN_HEIGHT = canvas.height;
+    function resizeCanvasToSquare() {
+      const minSize = Math.min(window.innerWidth, window.innerHeight);
+      canvas.width = minSize;
+      canvas.height = minSize;
+    }
+
+    window.addEventListener('load', resizeCanvasToSquare);
+    window.addEventListener('resize', resizeCanvasToSquare);
+
+    const SCREEN_WIDTH = () => canvas.width;
+    const SCREEN_HEIGHT = () => canvas.height;
 
     const COLORS = {
       RED: 'rgb(255,0,0)',
@@ -125,31 +122,42 @@
 
     document.addEventListener('keydown', e => {
       keys[e.code] = true;
-      if (e.code === 'Space') {
-        shootBlock();
-      }
+      if (e.code === 'Space') shootBlock();
     });
 
     document.addEventListener('keyup', e => {
       keys[e.code] = false;
     });
 
+    // Touch control state
+    let movingLeft = false;
+    let movingRight = false;
+
+    // Touch buttons
+    document.getElementById('leftBtn').addEventListener('touchstart', () => movingLeft = true);
+    document.getElementById('leftBtn').addEventListener('touchend', () => movingLeft = false);
+
+    document.getElementById('rightBtn').addEventListener('touchstart', () => movingRight = true);
+    document.getElementById('rightBtn').addEventListener('touchend', () => movingRight = false);
+
+    document.getElementById('shootBtn').addEventListener('touchstart', () => shootBlock());
+
     const popSound = new Audio('pop.wav');
-    popSound.load();
 
     class Shooter {
       constructor() {
         this.width = 50;
         this.height = 50;
-        this.x = SCREEN_WIDTH / 2 - this.width / 2;
-        this.y = SCREEN_HEIGHT - this.height - 10;
+        this.x = SCREEN_WIDTH() / 2 - this.width / 2;
+        this.y = SCREEN_HEIGHT() - this.height - 10;
         this.speed = 5;
         this.color = COLORS.WHITE;
       }
 
       update() {
-        if (keys['ArrowLeft'] && this.x > 0) this.x -= this.speed;
-        if (keys['ArrowRight'] && this.x + this.width < SCREEN_WIDTH) this.x += this.speed;
+        if (keys['ArrowLeft'] || movingLeft) this.x -= this.speed;
+        if (keys['ArrowRight'] || movingRight) this.x += this.speed;
+        this.x = Math.max(0, Math.min(SCREEN_WIDTH() - this.width, this.x));
       }
 
       draw() {
@@ -179,7 +187,7 @@
       }
 
       isOutOfScreen() {
-        return (this.direction === 'down') ? this.y > SCREEN_HEIGHT : this.y + this.height < 0;
+        return (this.direction === 'down') ? this.y > SCREEN_HEIGHT() : this.y + this.height < 0;
       }
 
       draw() {
@@ -224,7 +232,7 @@
     }
 
     function spawnBlock() {
-      const x = Math.random() * (SCREEN_WIDTH - 40) + 20;
+      const x = Math.random() * (SCREEN_WIDTH() - 40) + 20;
       const y = -50;
       const color = BLOCK_COLORS[Math.floor(Math.random() * BLOCK_COLORS.length)];
       fallingBlocks.push(new Block(color, x, y, 'down'));
@@ -257,17 +265,16 @@
         return !block.isOutOfScreen();
       });
 
-      for (let si = shotBlocks.length - 1; si >= 0; si--) {
-        for (let fi = fallingBlocks.length - 1; fi >= 0; fi--) {
-          if (rectsCollide(shotBlocks[si], fallingBlocks[fi])) {
+      shotBlocks.forEach((shotBlock, si) => {
+        fallingBlocks.forEach((fallBlock, fi) => {
+          if (rectsCollide(shotBlock, fallBlock)) {
             fallingBlocks.splice(fi, 1);
             shotBlocks.splice(si, 1);
             score++;
             if (score > highScore) highScore = score;
-            break;
           }
-        }
-      }
+        });
+      });
 
       if (isFlashing && now - flashStartTime > flashDuration) {
         isFlashing = false;
@@ -276,14 +283,14 @@
 
     function draw() {
       ctx.fillStyle = isFlashing ? COLORS.RED : 'black';
-      ctx.fillRect(0, 0, SCREEN_WIDTH, SCREEN_HEIGHT);
+      ctx.fillRect(0, 0, SCREEN_WIDTH(), SCREEN_HEIGHT());
 
       if (!gameStarted) {
         ctx.fillStyle = COLORS.WHITE;
-        ctx.font = '72px Arial';
+        ctx.font = '48px Arial';
         ctx.textAlign = 'center';
         ctx.textBaseline = 'middle';
-        ctx.fillText('BLOCKSHOOTER', SCREEN_WIDTH / 2, SCREEN_HEIGHT / 2 - 50);
+        ctx.fillText('BLOCKSHOOTER', SCREEN_WIDTH() / 2, SCREEN_HEIGHT() / 2 - 40);
         return;
       }
 
@@ -292,10 +299,10 @@
       shotBlocks.forEach(block => block.draw());
 
       ctx.fillStyle = COLORS.YELLOW;
-      ctx.font = '36px Arial';
+      ctx.font = '24px Arial';
       ctx.textAlign = 'left';
-      ctx.fillText(`Score: ${score}`, SCREEN_WIDTH - 200, 40);
-      ctx.fillText(`High Score: ${highScore}`, 20, 40);
+      ctx.fillText(`Score: ${score}`, 20, 30);
+      ctx.fillText(`High Score: ${highScore}`, SCREEN_WIDTH() - 180, 30);
     }
 
     function gameLoop() {
@@ -307,20 +314,8 @@
     document.getElementById('startButton').addEventListener('click', () => {
       gameStarted = true;
       document.getElementById('startButton').style.display = 'none';
+      document.getElementById('mobileControls').style.display = 'flex';
     });
-
-    // Mobile buttons
-    const leftBtn = document.getElementById('leftBtn');
-    const rightBtn = document.getElementById('rightBtn');
-    const shootBtn = document.getElementById('shootBtn');
-
-    leftBtn.addEventListener('touchstart', () => keys['ArrowLeft'] = true);
-    leftBtn.addEventListener('touchend', () => keys['ArrowLeft'] = false);
-
-    rightBtn.addEventListener('touchstart', () => keys['ArrowRight'] = true);
-    rightBtn.addEventListener('touchend', () => keys['ArrowRight'] = false);
-
-    shootBtn.addEventListener('touchstart', () => shootBlock());
 
     gameLoop();
   </script>
