--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   <!-- Mobile controls -->
   <div id="mobileControls">
     <button id="leftBtn" class="control-btn">◀️ Left</button>
-    <button id="shootBtn" class="control-btn">🔥 Shoot</button>
+    <button id="shootBtn" class="control-btn">Shoot</button>
     <button id="rightBtn" class="control-btn">▶️ Right</button>
   </div>
 
