--- a/index.html
+++ b/index.html
@@ -67,10 +67,15 @@
     }
 
     .control-btn {
+      user-select: none;
+      -webkit-user-select: none;
+      -webkit-touch-callout: none;
+      touch-action: manipulation;
+      outline: none;
       flex: 1;
       margin: 5px;
-      font-size: 24px;
-      padding: 16px;
+      font-size: 48px;
+      padding: 48px;
       border-radius: 10px;
       border: none;
       background-color: yellow;
@@ -308,6 +313,14 @@
     document.getElementById('rightBtn').addEventListener('touchstart', () => keys['ArrowRight'] = true);
     document.getElementById('rightBtn').addEventListener('touchend', () => keys['ArrowRight'] = false);
     document.getElementById('shootBtn').addEventListener('touchstart', shootBlock);
+
+    // Prevent focus/clipboard popup
+    const buttons = document.querySelectorAll('.control-btn');
+    buttons.forEach(btn => {
+      btn.addEventListener('touchstart', () => {
+        btn.blur(); // Removes focus that might cause clipboard
+      });
+    });
 
     gameLoop();
   </script>
