--- a/index.html
+++ b/index.html
@@ -12,6 +12,25 @@
       font-family: Arial, sans-serif;
       text-align: center;
     }
+    <style>
+  * {
+    user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    touch-action: manipulation;
+  }
+
+  body {
+    -webkit-touch-callout: none; /* iOS long press menu */
+    margin: 0;
+  }
+
+  button, canvas {
+    -webkit-touch-callout: none;
+    user-select: none;
+  }
+</style>
 
     h1 {
       padding-top: 20px;
