--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       background-color: white;
       font-family: Arial, sans-serif;
       text-align: center;
+      -webkit-user-select: none; /* prevent text selection on mobile */
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
     }
 
     h1 {
@@ -47,6 +51,8 @@
       z-index: 2;
       transition: background-color 0.3s;
       text-transform: uppercase;
+      user-select: none;
+      -webkit-user-select: none;
     }
 
     #startButton:hover {
@@ -60,16 +66,18 @@
       bottom: 10px;
       width: 100%;
       justify-content: center;
-      padding: 10px;
+      padding: 10px 15px; /* horizontal padding to keep buttons inside */
       background-color: rgba(255, 255, 255, 0.9);
       z-index: 3;
       display: flex;
       gap: 10px;
+      box-sizing: border-box;
+      -webkit-tap-highlight-color: transparent; /* remove tap highlight */
     }
 
     .control-btn {
       flex: none;
-      width: 90px;       /* fixed width */
+      width: 85px; /* slightly smaller so all fit */
       font-size: 28px;
       padding: 12px 0;
       border-radius: 10px;
@@ -79,23 +87,23 @@
       font-weight: bold;
       user-select: none;
       -webkit-user-select: none;
-      -webkit-tap-highlight-color: transparent;
       touch-action: manipulation;
       white-space: nowrap;
-    }
-
-    @media (max-width: 400px) {
-      .control-btn {
-        width: 70px;
-        font-size: 22px;
-        padding: 10px 0;
-      }
     }
 
     /* Hide mobile controls on desktop */
     @media (min-width: 768px) {
       #mobileControls {
         display: none !important;
+      }
+    }
+
+    /* Smaller buttons for very small mobile screens */
+    @media (max-width: 400px) {
+      .control-btn {
+        width: 65px;
+        font-size: 22px;
+        padding: 10px 0;
       }
     }
   </style>
@@ -110,9 +118,9 @@
 
   <!-- Mobile Controls -->
   <div id="mobileControls">
-    <button class="control-btn" id="leftBtn">Left</button>
-    <button class="control-btn" id="shootBtn">Shoot</button>
-    <button class="control-btn" id="rightBtn">Right</button>
+    <button class="control-btn" id="leftBtn" type="button">Left</button>
+    <button class="control-btn" id="shootBtn" type="button">Shoot</button>
+    <button class="control-btn" id="rightBtn" type="button">Right</button>
   </div>
 
   <script>
@@ -142,6 +150,13 @@
 
     document.addEventListener('keyup', e => {
       keys[e.code] = false;
+    });
+
+    // Prevent default gestures and clipboard popups on touch buttons
+    ['touchstart', 'touchmove', 'touchend', 'touchcancel'].forEach(evt => {
+      document.getElementById('mobileControls').addEventListener(evt, e => {
+        e.preventDefault();
+      }, { passive: false });
     });
 
     const popSound = new Audio('pop.wav');
@@ -316,27 +331,35 @@
       document.getElementById('mobileControls').style.display = 'flex';
     });
 
-    // Mobile control handlers with preventDefault to stop clipboard on mobile
-    document.getElementById('leftBtn').addEventListener('touchstart', e => {
+    // Mobile control handlers
+    const leftBtn = document.getElementById('leftBtn');
+    const rightBtn = document.getElementById('rightBtn');
+    const shootBtn = document.getElementById('shootBtn');
+
+    leftBtn.addEventListener('touchstart', e => {
       e.preventDefault();
       keys['ArrowLeft'] = true;
-    });
-    document.getElementById('leftBtn').addEventListener('touchend', e => {
+    }, { passive: false });
+
+    leftBtn.addEventListener('touchend', e => {
       e.preventDefault();
       keys['ArrowLeft'] = false;
-    });
-    document.getElementById('rightBtn').addEventListener('touchstart', e => {
+    }, { passive: false });
+
+    rightBtn.addEventListener('touchstart', e => {
       e.preventDefault();
       keys['ArrowRight'] = true;
-    });
-    document.getElementById('rightBtn').addEventListener('touchend', e => {
+    }, { passive: false });
+
+    rightBtn.addEventListener('touchend', e => {
       e.preventDefault();
       keys['ArrowRight'] = false;
-    });
-    document.getElementById('shootBtn').addEventListener('touchstart', e => {
+    }, { passive: false });
+
+    shootBtn.addEventListener('touchstart', e => {
       e.preventDefault();
       shootBlock();
-    });
+    }, { passive: false });
 
     gameLoop();
   </script>
